--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Dombyra Tuner</title>
+    <link rel="icon" href="./logo_16.png">
+    <link rel="icon" href="./logo_32.png">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
