minor perfections: english notes, better quality logo with fallbacks

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
     <title>Dombyra Tuner</title>
     <link rel="icon" href="./logo_16.png">
     <link rel="icon" href="./logo_32.png">
+    <link rel="icon" href="./logo_48.png">
+    <link rel="icon" href="./logo_96.png">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
